# diary-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: commands.rs  datetime.rs  db.rs  main.rs
