[package]
name = "diary-rs"
description = "A command line diary program!"
authors = ["Neil Bryson Cargamento <neilbrysonmc@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
dirs = "4.0.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
time = { version = "0.3.9", features = ["formatting", "local-offset", "macros", "parsing"] }
